feat: add file storage && get images from DEM
